# proxima

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Gliese.sln  README.md  Venus.sln  build.rs  main.cpp  vcpkg-configuration.json  vcpkg.json
CppWinRTComponent/: CppWinRTComponent.vcxproj  CppWinRTComponent.vcxproj.filters  SvgConverter.cpp  SvgConverter.h  SvgConverter.idl
CppWinRTComponent/Themes/: Generic.xaml
CppWinRTProjection/: CppWinRTProjection.csproj
CsWinRTApp/: App.xaml  App.xaml.cs  CsWinRTApp.csproj  MainWindow.xaml  MainWindow.xaml.cs
CsWinRTApp/Models/: FolderItem.cs  GeFileInfo.cs  GeFileInfo2.cs  GeFileView.cs  ImageInfo.cs
CsWinRTApp/Pages/: MainPage.xaml  MainPage.xaml.cs  Page2.xaml  Page2.xaml.cs  PreviewPage.xaml.cs
CsWinRTApp/Services/: FileService.cs  FolderHistoryService.cs  ImageService.cs  LogService.cs  SvgImageService.cs  WebPImageService.cs
Kepler/: KeplerApp.swift
Kepler.xcodeproj/: project.pbxproj
Kepler.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Kepler.xcworkspace/: contents.xcworkspacedata
Kepler/Assets.xcassets/DomainImage.imageset/: Contents.json
Kepler/Assets.xcassets/Tools/uuid.imageset/: Contents.json
Kepler/Base.lproj/: Main.storyboard
Kepler/Components/: ImageComponent.swift
Kepler/Components/Common/: Navbar.swift
Kepler/Models/: ArticleModel.swift  Image.swift
Kepler/Pages/: MainPage.swift
Kepler/Pages/Domain/: DomainImage.swift  DomainPartition.swift
Kepler/Pages/Files/: FilesView.swift
Kepler/Pages/Images/: GridComponent.swift  ImagesPage.swift  Service.swift  State.swift
Kepler/Pages/Notes/: NoteComponent.swift  NoteService.swift  NotesGridComponent.swift  NotesPage.swift
Kepler/Router/: Router.swift
Kepler/Services/: Color.swift  Directory.swift  Filesystem.swift
Venus/: App.xaml.cpp  App.xaml.h  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  MainWindow.xaml.cpp  Page2.cpp  Page2.h  Page2.idl  Page2.xaml  Venus.vcxproj  Venus.vcxproj.filters  pch.h
common/services/svgutil/: svgutil.cpp  svgutil.h
content/: App.qml
content/components/: AppNav.qml
content/files/: FilesDetail.qml  FilesPage.qml  Index.qml
content/images/: ImagesPage.qml
content/macos/sources/: toolbar.cpp
content/macos/toolbar/: MacToolbarLeft.qml
content/notes/: NotesPage.qml
content/pages/files/: FilesDetail.qml  FilesPage.qml
content/pages/uuid/: UUIDPage.qml
content/password/: PasswordPage.qml
content/proxima/: App.qml
content/proxima/partial/: Topbar.qml
content/sources/: File.cpp  File.h  Toolbar.cpp  file.cpp  location.cpp  location.h  markdown.cpp  toolbar.cpp  toolbar.h
data/Swift.chan/组合Swift和Cpp的包管理生态.note/: index.md
data/Swift.chan/组合Swift和Cpp的包管理生态.note/assets/project/Native/: test.cpp
data/Swift.chan/组合Swift和Cpp的包管理生态.note/assets/project/Native/logger/: logger.cpp
dawn/: .gitignore  README.md  gradle.properties  settings.gradle.kts
dawn/app/: build.gradle.kts
dawn/app/src/androidTest/java/xyz/huable/dawn/: ExampleInstrumentedTest.kt
dawn/app/src/androidTest/java/xyz/weable/venus/: ExampleInstrumentedTest.kt
dawn/app/src/main/: AndroidManifest.xml
dawn/app/src/main/java/xyz/huable/dawn/: MainActivity.kt
dawn/app/src/main/java/xyz/huable/dawn/model/: FileItem.kt
dawn/app/src/main/java/xyz/huable/dawn/ui/compose/: DawnApp.kt
dawn/app/src/main/java/xyz/huable/dawn/ui/files/: FileListFragment.kt  FileListViewModel.kt  FilePreviewFragment.kt
dawn/app/src/main/java/xyz/huable/dawn/ui/reflow/: ReflowFragment.kt  ReflowViewModel.kt
dawn/app/src/main/java/xyz/huable/dawn/util/: SampleFilesInitializer.kt
dawn/app/src/main/java/xyz/weable/venus/: MainActivity.kt
dawn/app/src/main/res/drawable/: ic_chevron_right.xml  ic_create_folder.xml  ic_file_binary.xml  ic_file_image.xml  ic_file_text.xml  ic_folder.xml
dawn/app/src/main/res/layout/: app_bar_main.xml  fragment_file_list.xml  fragment_file_preview.xml  item_file.xml
dawn/app/src/main/res/layout-w1240dp/: app_bar_main.xml
dawn/app/src/main/res/layout-w600dp/: app_bar_main.xml
dawn/app/src/main/res/menu/: bottom_navigation.xml  menu_file_actions.xml  navigation_drawer.xml
dawn/app/src/main/res/navigation/: mobile_navigation.xml
dawn/app/src/main/res/values/: strings.xml  themes.xml
dawn/app/src/main/res/values-night/: themes.xml
dawn/app/src/test/java/xyz/huable/dawn/: ExampleUnitTest.kt
dawn/app/src/test/java/xyz/weable/venus/: ExampleUnitTest.kt
dawn/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
dawn/gradle/wrapper/: gradle-wrapper.properties
euler/: README.md
euler/Venus/: ContentView.swift  FileDetailView.swift  FileItem.swift  FileListView.swift  FileSystemManager.swift  ImagePreviewView.swift  ImportFileView.swift  Info.plist  Item.swift  TextPreviewView.swift  VenusApp.swift
euler/Venus.xcodeproj/: project.pbxproj
euler/Venus.xcodeproj/xcshareddata/xcschemes/: Venus.xcscheme
gliese/logger/: logger.cpp
hugin/: CMakeLists.txt  MessagesImpl.swift  README.md
macos/: module.modulemap
proxima/: main.cpp
proxima/macos/: MessagesImpl.swift  checkeredwindow.cpp  fibonacci.cpp  macwindow.h  macwindow.mm  proxima.entitlements  test.cpp
proxima/services/: LibraryService.cpp  LibraryService.h  SqliteService.cpp  SyncService.cpp  SyncService.h  location_service.cpp  location_service.h
proxima/tests/: cases.h  main.cpp
proxima/tests/files/: file.cpp
proxima/tests/sqlite/: sqlite.cpp
proxima/windows/: CMakeProjectDWM.cpp
pulsar/: config.yaml  router.cpp
pulsar/controllers/: article.cpp  channel.cpp
pulsar/controllers/filesystem/: filesystem.cpp
pulsar/services/business/: article.cpp  article.hpp  mail.cpp  mail.h
pulsar/services/syncer/: syncer.cpp
pulsar/tests/: tests.cpp
services/: LibraryService.cpp  LibraryService.h  SyncService.cpp
services/sqlite/: sqlite.cpp  sqlite.h
services/threads/: SyncThread.cpp
src/: lib.rs
tests/: cases.cpp
tests/files/: file.cpp  file.h
tests/sqlite/: sqlite.cpp  sqlite.h
vcpkg/ports/quark/: portfile.cmake  vcpkg.json
windows/logger/: logger.h
(+24 files in other folders)
